<resources>
    <string name="app_name">Recipe App</string>
    <string name="api_key">6dace282347f4b0d89693d881a40a81d</string>
    <string name="dish_name">Dish Name</string>
    <string name="menu">Menu</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_source">Recipe Source</string>
    <string name="summary">Summary</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingre_qc">1 pc</string>
    <string name="ingre_name">Chicken</string>
    <string name="default_name">Default</string>
    <string name="similar_recipes">Similar Recipes</string>
    <string name="instructions">Instructions</string>
    <string name="equipments">Equipments</string>
    <string name="no_similar">There is no Similar Recipes!</string>

    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>
</resources>