<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".activity.RecipeDetailActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:title="@string/recipe_details"
        android:titleTextColor="@color/white"
        android:layout_height="?attr/actionBarSize"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/recipe_name"
                android:text="@string/recipe_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="8dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/recipe_source"
                android:text="@string/recipe_source"
                android:textSize="14sp"
                android:textStyle="italic"
                android:padding="8dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>

            <TextView
                android:id="@+id/summary"
                android:text="@string/summary"
                android:textSize="14sp"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/ingredients"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RV_ingredients"
                tools:listitem="@layout/meals_ingredients"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>