<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp"
    android:layout_margin="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/instructions_steps_number"
                android:text="@string/default_name"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/instructions_steps_title"
                android:text="@string/default_name"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/equipments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@color/orange"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/instructions_equipments"
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@color/orange"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                tools:listitem="@layout/meals_ingredients"
                android:id="@+id/instructions_ingredients"
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>